<resources>
    <string name="app_name">userMobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="full_name">Full name:</string>
    <string name="passwordHint">******</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="sign_in">Sign in</string>
    <string name="someone_email_com">someone@email.com</string>
    <string name="email">Email:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="firstname_secondname">FirstName SecondName</string>
    <string name="_0749159835">0749159835</string>
    <string name="phone_number">Phone number</string>
    <string name="Continue">Continue</string>
    <string name="skip">skip</string>
    <string name="save">save</string>
    <string name="_33030">33030</string>
    <string name="timis">Timis</string>
    <string name="romania">Romania</string>
    <string name="street_house_no_app_no">street, house no, app no</string>
    <string name="timisoara">Timisoara</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="county">County</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset password</string>

    <string name="Open">userMobile</string>
    <string name="Close">userMobile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_storage_list_view">StorageListView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>