<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.Activities.LoginActivity"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:fontFamily="@font/fredericka_the_great"
        android:gravity="start"

        android:hint="@string/someone_email_com"
        android:inputType="textEmailAddress"
        android:paddingLeft="0dp"
        android:paddingTop="10dp"

        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="@+id/tvLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginEmail"
        app:layout_constraintWidth_percent=".8"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"


        android:layout_marginTop="200dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="400dp"

        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:fontFamily="@font/fredericka_the_great"
        android:gravity="start"
        android:hint="@string/passwordHint"
        android:importantForAutofill="no"

        android:inputType="textPassword"
        android:paddingLeft="1dp"
        android:paddingTop="10dp"
        android:paddingRight="1dp"

        android:paddingBottom="10dp"
        android:textColor="@color/white"


        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginPassword"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/tvLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/fredericka_the_great"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />

    <TextView
        android:id="@+id/tvLoginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/forgot_password"
        android:fontFamily="@font/fredericka_the_great"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

    <TextView
        android:id="@+id/tvLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:text="@string/don_t_have_an_account_register"
        android:fontFamily="@font/fredericka_the_great"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginSignIn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="gone" />

    <Button
        android:id="@+id/btnLoginSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#F44336"
        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginForgotPassword"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
