<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.Activities.RegisterActivity"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/etRegisterFullName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:fontFamily="@font/fredericka_the_great"
        android:gravity="start"

        android:hint="@string/firstname_secondname"
        android:inputType="textEmailAddress"
        android:paddingLeft="0dp"
        android:paddingTop="10dp"

        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="@+id/tvRegisterFullName"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterFullName"
        app:layout_constraintWidth_percent=".8"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvRegisterFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"


        android:layout_marginTop="150dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="450dp"

        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/full_name"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <EditText
        android:id="@+id/etRegisterEmail"

        android:layout_width="200dp"
        android:layout_height="48dp"
        android:fontFamily="@font/fredericka_the_great"

        android:gravity="start"
        android:hint="@string/someone_email_com"
        android:inputType="textEmailAddress"
        android:paddingLeft="0dp"

        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="@+id/tvRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterEmail"
        app:layout_constraintWidth_percent=".8"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="@+id/etRegisterFullName"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterFullName"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:fontFamily="@font/fredericka_the_great"
        android:gravity="start"
        android:hint="@string/passwordHint"
        android:importantForAutofill="no"

        android:inputType="textPassword"
        android:paddingLeft="1dp"
        android:paddingTop="10dp"
        android:paddingRight="1dp"

        android:paddingBottom="10dp"
        android:textColor="@color/white"


        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterPassword"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <EditText
        android:id="@+id/etRegisterConfirmPassword"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:fontFamily="@font/fredericka_the_great"
        android:gravity="start"
        android:hint="@string/passwordHint"
        android:importantForAutofill="no"

        android:inputType="textPassword"
        android:paddingLeft="1dp"
        android:paddingTop="10dp"
        android:paddingRight="1dp"

        android:paddingBottom="10dp"
        android:textColor="@color/white"


        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvRegisterConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterConfirmPassword"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/tvRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/fredericka_the_great"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etRegisterEmail"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail" />

    <TextView
        android:id="@+id/tvRegisterConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/fredericka_the_great"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:text="@string/confirm_password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword" />

    <Button
        android:id="@+id/btnRegisterContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#808080"
        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterConfirmPassword"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>