<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.Activities.ForgotPasswordActivity"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/etForgotPasswordEmail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:fontFamily="@font/fredericka_the_great"
        android:gravity="start"

        android:hint="@string/someone_email_com"
        android:inputType="textEmailAddress"
        android:paddingLeft="0dp"
        android:paddingTop="10dp"

        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="@+id/tvForgotPasswordEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordEmail"
        app:layout_constraintWidth_percent=".8"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tvForgotPasswordEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"


        android:layout_marginTop="250dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="350dp"

        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <Button
        android:id="@+id/btnForgotPasswordPasswordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#F44336"
        android:fontFamily="@font/fredericka_the_great"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForgotPasswordEmail"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>